[package]
name = "audio-multisample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
cpal = "0.13.5"
crossbeam = "0.8.1"
midir = "*"
thiserror = "*"
serde = { version = "1", features = ["derive"] }
toml = "*"